New Pages Updated

--- a/full-audit.html
+++ b/full-audit.html
@@ -88,7 +88,7 @@
                             <div class="accordion" id="accordionExample">
                                 <div class="card">
                                     <div class="card-header" id="headingOne">
-                                        <button class="btn btn-link accordion-btn collapsed" type="button"
+                                        <button class="btn btn-link accordion-btn collapsed list-no-green" type="button"
                                             data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
                                             aria-controls="collapseOne">
                                             <i class="fa fa-caret-right" aria-hidden="true"></i> 201
@@ -341,7 +341,7 @@
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingTwo">
-                                        <button class="btn btn-link accordion-btn collapsed" type="button"
+                                        <button class="btn btn-link accordion-btn collapsed list-no-green" type="button"
                                             data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
                                             aria-controls="collapseTwo">
                                             <i class="fa fa-caret-right" aria-hidden="true"></i> 202
@@ -370,7 +370,7 @@
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingThree">
-                                        <button class="btn btn-link accordion-btn collapsed" type="button"
+                                        <button class="btn btn-link accordion-btn collapsed list-no-red" type="button"
                                             data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                                             aria-controls="collapseThree">
                                             <i class="fa fa-caret-right" aria-hidden="true"></i> 203
@@ -399,7 +399,7 @@
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingFour">
-                                        <button class="btn btn-link accordion-btn collapsed" type="button"
+                                        <button class="btn btn-link accordion-btn collapsed list-no-orange" type="button"
                                             data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                                             aria-controls="collapseFour">
                                             <i class="fa fa-caret-right" aria-hidden="true"></i> 204
