--- a/company-setting.html
+++ b/company-setting.html
@@ -25,32 +25,39 @@
         <div class="site-header">
           <nav class="navbar navbar-expand-lg">
             <div class="navbar-content-left">
-              <button class="navbar-toggler" type="button" id="menu-toggle"  data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                </span>
-              </button>
-              <h2 class="heading-left">Company Settings</h2>
+              <div class="navbar--view-lt">
+                <button class="navbar-toggler" type="button" id="menu-toggle"  data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </span>
+                </button>
+                <h2 class="heading-left">Company Settings</h2>
+              </div>
             </div>
               
       
               <div class="navbar-content-right"> 
-                <ul class="navbar-nav ml-auto mt-lg-0">
+                <ul class="navbar-nav ml-auto mt-lg-0 user-nav-dropdown">
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fa fa-user" aria-hidden="true"></i> Lindsay Harrington 
-                      <span class="down-arrow">
-                          <i class="fa fa-angle-down" aria-hidden="true"></i>
-                      </span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" href="#">Settings</a>
-                      <a class="dropdown-item" href="#">Logout</a>
-                    </div>
-                  </li>
-                </ul>
+                     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                       aria-expanded="false">
+                       <i class="fa fa-user" aria-hidden="true"></i> Lindsay Harrington
+                       <span class="down-arrow">
+                         <i class="fa fa-angle-down" aria-hidden="true"></i>
+                       </span>
+                     </a>
+                     <div class="dropdown-menu dropdown-menu-right">
+                       <a class="dropdown-item" href="#">
+                        <strong>Lindsay Harrington</strong>
+                        <small>Super Admin</small>
+                       </a>
+                       <a class="dropdown-item" href="#">My Profile</a>
+                       <a class="dropdown-item red-link" href="#">Logout</a>
+                     </div>
+                   </li>
+               </ul>
               </div>
             </nav>
         </div>
@@ -61,14 +68,25 @@
             <img src="assets/images/logo.png" alt="logo" />
           </div>
           <ul class="list-group">
-            <li>
-                <a href="index.html" class="list-group-item">
-                    <span class="sidebar-list-icon home-icon" style="background-image: url(assets/images/home-gray.png);"></span> Dashboard
-                </a>
+             <li>
+              <div class="dropdown theme-dropdown">
+                 <a class="list-group-item theme-dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                 <span class="sidebar-list-icon home-icon"
+                    style="background-image: url(assets/images/home-gray.png);"></span> Dashboard
+                 <span class="down-arrow">
+                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                 </span>
+                 </a>
+                 <div class="dropdown-menu theme-dropdown-menu">
+                    <a class="dropdown-item" href="global-leak-efficiency-audit.html">Global Leak/Efficiency Audit</a>
+                    <a class="dropdown-item" href="global-leak-status.html">Global Leak Status</a>
+                 </div>
+              </div>
             </li>
             <li>
                 <div class="dropdown profile-dropdown show">
-                    <a class="list-group-item active dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="list-group-item active profile-dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         <span class="sidebar-list-icon company-icon" style="background-image: url(assets/images/company-gray.png);"></span> Company Profile 
                         <span class="down-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
