--- a/edit-company-profile.html
+++ b/edit-company-profile.html
@@ -75,7 +75,7 @@
                  </span>
                  </a>
                  <div class="dropdown-menu theme-dropdown-menu">
-                    <a class="dropdown-item" href="global-leak-efficiency-audit.html">Global Leak/Efficiency Audit</a>
+                    <a class="dropdown-item" href="index.html">Global Leak/Efficiency Audit</a>
                     <a class="dropdown-item" href="global-leak-status.html">Global Leak Status</a>
                  </div>
               </div>
