--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </span>
                         </a>
                         <div class="dropdown-menu theme-dropdown-menu show">
-                           <a class="dropdown-item active" href="global-leak-efficiency-audit.html">Global Leak/Efficiency Audit</a>
+                           <a class="dropdown-item active" href="index.html">Global Leak/Efficiency Audit</a>
                            <a class="dropdown-item" href="global-leak-status.html">Global Leak Status</a>
                         </div>
                      </div>
